fix: validation added for images, req.body issue solved, swagger.json updated for 400 response
